--- a/src/css/navegacao-inicial.css
+++ b/src/css/navegacao-inicial.css
@@ -166,27 +166,30 @@
   z-index: 15;
   display: flex;
   flex-direction: column;
-  opacity: 1;
   transition: all 0.3s linear;
+  opacity: 1;
 }
 
 .menu-disable {
-  padding: 10px;
+  padding: 50px 20px 20px;
   position: fixed;
-  top: 20px;
-  height: 100vh;
-  width: 0;
   right: 0;
-  opacity: 0;
+  width: 0;
+  height: 100vh;
+  display: flex;
   flex-direction: column;
   transition: all 0.3s linear;
   z-index: -1;
+  opacity: 0;
 }
 
 .route {
   color: white;
+  transition: all 0.3s linear;
 }
 
-.route.hover {
-  color: #405660;
+.route:hover {
+  color: #85a1ae;
+  font-weight: bolder;
+  transition: all 0.3s linear;
 }
